UPDATE DTOs & SERVICES & RESOURCES